ini-persist/tests/compile-fail/conflicting_flatten.stderr
error: cannot rename a flattened field
  --> tests/compile-fail/conflicting_flatten.rs:12:11
   |
12 |     #[ini(rename = "Bargle")]
   |           ^^^^^^^^^^^^^^^^^

error: cannot define a key format for a flattened field
  --> tests/compile-fail/conflicting_flatten.rs:16:11
   |
16 |     #[ini(key_format = "{name}{prefix}")]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot define a load function for a flattened field
  --> tests/compile-fail/conflicting_flatten.rs:20:11
   |
20 |     #[ini(parse_with = my_parse)]
   |           ^^^^^^^^^^^^^^^^^^^^^

error: cannot flatten a renamed field
  --> tests/compile-fail/conflicting_flatten.rs:24:11
   |
24 |     #[ini(flatten)]
   |           ^^^^^^^

error: cannot flatten a field with a defined key format
  --> tests/compile-fail/conflicting_flatten.rs:28:11
   |
28 |     #[ini(flatten)]
   |           ^^^^^^^

error: cannot flatten a field with a defined load function
  --> tests/compile-fail/conflicting_flatten.rs:32:11
   |
32 |     #[ini(flatten)]
   |           ^^^^^^^
